# omniscient

./: .ghci  .gitignore  LICENSE  README.md  cabal.sandbox.config  omniscient.cabal  stack.yaml
app/: Main.hs
src/: Omniscient.hs
src/Omniscient/: Server.hs
src/Omniscient/Server/: API.hs  Backend.hs  Core.hs  Frontend.hs  Models.hs  Types.hs
static/: view.js
test/: Spec.hs
